--- a/fwcode/template/base.html
+++ b/fwcode/template/base.html
@@ -60,8 +60,10 @@
     <li class="breadcrumb-item active" aria-current="page">Data</li>
   </ol>
 </nav>
+          <div style="height:82vh; overflow-y:auto;overflow-x:hidden">
           {%block content%}
           {%endblock%}
+      </div>
       </div>
     <!-- End of Content Wrapper -->
   </div>
