--- a/fwcode/template/webapp/new_post.html
+++ b/fwcode/template/webapp/new_post.html
@@ -3,21 +3,19 @@
 {% load crispy_forms_tags %}
 {%block content%}
 
-   <h1>Welcome to New POST Page</h1>
-<div class="container mx-auto">
-   <form method="post" enctype="multipart/form-data" autocomplete="off">
-                      {%csrf_token%}
-                      {%if snippet_form and sub_heading_form%}
-                        <div class="row">
-                          <div class="col-md-12">{{sub_heading_form.heading|as_crispy_field}}</div>
-                            <div class="col-md-12">{{sub_heading_form.name|as_crispy_field}}</div>
-                          <div class="col-md-12">{{sub_heading_form.description|as_crispy_field}}</div>
-                          <div class="col-md-12">{{snippet_form.code_snippet|as_crispy_field}}</div>
-                          <div class="col-md-12">{{snippet_form.attachments|as_crispy_field}}</div>
 
+<div class="row">
+    <div class="col-md-4 ml-2">
+        <h1>New Heading</h1>
+         <form method="post" enctype="multipart/form-data" autocomplete="off">
+                      {%csrf_token%}
+                      {%if heading_form%}
+                        <div class="row">
+                          <div class="col-md-12 form-group">{{heading_form.language|as_crispy_field}}</div>
+                            <div class="col-md-12 form-group">{{heading_form.name|as_crispy_field}}</div>
                         </div>
                       {%endif%}
-                        <ul class="list-inline text-right mb-0">
+                        <ul class="list-inline text-left mb-0 mt-2">
                             <li class="list-inline-item">
                                 <button type="reset" class="btn btn-light">Reset</button>
                             </li>
@@ -26,6 +24,30 @@
                             </li>
                         </ul>
                   </form>
+    </div>
+    <div class="col-md-7">
+        <h1>Add New Blog</h1>
+   <form method="post" enctype="multipart/form-data" autocomplete="off">
+                      {%csrf_token%}
+                      {%if snippet_form and sub_heading_form%}
+                        <div class="row">
+                          <div class="col-md-12 form-group">{{sub_heading_form.heading|as_crispy_field}}</div>
+                            <div class="col-md-12 form-group">{{sub_heading_form.name|as_crispy_field}}</div>
+                          <div class="col-md-12 form-group">{{sub_heading_form.description|as_crispy_field}}</div>
+                          <div class="col-md-12 form-group">{{snippet_form.code_snippet|as_crispy_field}}</div>
+                        </div>
+                      {%endif%}
+                        <ul class="list-inline text-right mb-0 mt-2">
+                            <li class="list-inline-item">
+                                <button type="reset" class="btn btn-light">Reset</button>
+                            </li>
+                            <li class="list-inline-item">
+                                <button type="submit" class="btn btn-info">Save</button>
+                            </li>
+                        </ul>
+                  </form>
+    </div>
+    <div class="col-md-1"></div>
     </div>
 {%endblock %}
 
