--- a/fwcode/template/base.html
+++ b/fwcode/template/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Vinay Maurya">
     {% load static %}
 
-    <title>FWCode</title
+    <title>FWCode</title>
     <link rel='shortcut icon' type='image/x-icon' href="{% static 'assets/img/favi.png' %}" />
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
