--- a/fwcode/template/webapp/post_detail.html
+++ b/fwcode/template/webapp/post_detail.html
@@ -2,6 +2,9 @@
 {%load static%}
 {% load crispy_forms_tags %}
 {%block content%}
+<style>
+
+</style>
    <div class="container">
       <div class="card border-success-left mb-2">
   <div class="card-body">
@@ -9,18 +12,31 @@
       <div class="container mt-4">
           {%if subheading%}
           {%for subheading in subheading%}
-          <h4>{{forloop.counter}}.&nbsp;{{subheading.name|title}}</h4>
-          <p class="ml-2">{{subheading.description|safe}}</p>
+          {%if subheading.name%}
+
+
+                  <h4>&#8827; &nbsp;{{subheading.name|title}}</h4>
+
+
+          {%endif%}
+          <p class="ml-2 pt-2">{{subheading.description|safe}}</p>
           {%if code%}
           {%for code in code%}
           {%if code.subheading == subheading%}
+          {%if code.code_snippet%}
           <div class="row mx-auto mb-4">
               <div class="col-md-1"></div>
               <div class="col-md-10 border-info-left bg-dark pt-4 pb-2">
                 <pre><code class="text-white">{{code.code_snippet}}</code></pre>
               </div>
-
           </div>
+          {%endif%}
+          {%if code.attachments%}
+            <div class="container text-center pt-2">
+                <h4 class="text-secondary"><b>OUTPUT</b></h4>
+               <img src="{{code.attachments.url}}" width="70%" />
+            </div>
+          {%endif%}
 
           {%endif%}
           {%endfor%}
